--- a/app/views/calenders/index.html.erb
+++ b/app/views/calenders/index.html.erb
@@ -2,7 +2,9 @@
 
 <h1>Calenders</h1>
 
-<table>
+<div class="table-container">
+
+<table class="table is-bordered is-striped">
   <thead>
     <tr>
       <th>Company name</th>
@@ -35,7 +37,7 @@
     <% end %>
   </tbody>
 </table>
-
+</div>
 <br>
 
 <%= link_to 'New Calender', new_calender_path %>
