--- a/app/views/cereal_sales/_form.html.erb
+++ b/app/views/cereal_sales/_form.html.erb
@@ -12,91 +12,125 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Company_Name %>
-    <%= form.text_field :Company_Name %>
+    <%= form.label :Company_Name, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Company_Name, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Date %>
-    <%= form.date_select :Date %>
+    <%= form.label :Date, class:"label" %>
+    <div class="control">
+      <%= form.date_select :Date, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Season %>
-    <%= form.text_field :Season %>
+    <%= form.label :Season, class:"label" %>
+      <%= form.text_field :Season, class:"input" %>
+    <div class="control">
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Farm_Name %>
-    <%= form.text_field :Farm_Name %>
+    <%= form.label :Farm_Name, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Farm_Name, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Grower_Name %>
-    <%= form.text_field :Grower_Name %>
+    <%= form.label :Grower_Name, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Grower_Name, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Truck_Number %>
-    <%= form.text_field :Truck_Number %>
+    <%= form.label :Truck_Number, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Truck_Number, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Trailer_Number %>
-    <%= form.text_field :Trailer_Number %>
+    <%= form.label :Trailer_Number, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Trailer_Number, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Test_Density %>
-    <%= form.text_field :Test_Density %>
+    <%= form.label :Test_Density, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Test_Density, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :External_Matter %>
-    <%= form.text_field :External_Matter %>
+    <%= form.label :External_Matter, class:"label" %>
+    <div class="control">
+      <%= form.text_field :External_Matter, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Gross_Mass %>
-    <%= form.text_field :Gross_Mass %>
+    <%= form.label :Gross_Mass, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Gross_Mass, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Tare %>
-    <%= form.text_field :Tare %>
+    <%= form.label :Tare, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Tare, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Net_Mass %>
-    <%= form.text_field :Net_Mass %>
+    <%= form.label :Net_Mass, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Net_Mass, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Price_Per_Tonne %>
-    <%= form.text_field :Price_Per_Tonne %>
+    <%= form.label :Price_Per_Tonne, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Price_Per_Tonne, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Quantity %>
-    <%= form.text_field :Quantity %>
+    <%= form.label :Quantity, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Quantity, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Amount_Paid %>
-    <%= form.text_field :Amount_Paid %>
+    <%= form.label :Amount_Paid , class:"label"%>
+    <div class="control">
+      <%= form.text_field :Amount_Paid, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Pro_Number %>
-    <%= form.text_field :Pro_Number %>
+    <%= form.label :Pro_Number, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Pro_Number, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
+    <%= form.label :user_id, class:"label" %>
+    <div class="control">
+      <%= form.text_field :user_id, class:"input" %>
+    </div>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class:"button is-success" %>
   </div>
 <% end %>
