--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,118 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="columns is-centered">
+  <div class="column is-8">
+    <div class="card">
+      <header class="card-header">
+        <h2><strong> Edit <%= resource_name.to_s.humanize %> Account</strong></h2>
+      </header>
+      <div class="card-content">
+        <div class="content">
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+            <%= render "devise/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+            <div class="field">
+              <%= f.label :email, class:"label"  %>
+              <div class="control">
+                <%= f.email_field :email, autofocus: true, autocomplete: "email" , class:"input"%>
+              </div>
+            </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+            <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+              <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+            <% end %>
+
+            <div class="field">
+              <%= f.label :password, class:"label"  %> <i>(leave blank if you don't want to change it)</i>
+              <div class="control">
+                <%= f.password_field :password, autocomplete: "new-password", class:"input" %>
+              </div>
+              <% if @minimum_password_length %>
+                <br />
+                <em><%= @minimum_password_length %> characters minimum</em>
+              <% end %>
+            </div>
+
+            <div class="field">
+              <%= f.label :password_confirmation, class:"label"  %>
+              <div class="control">
+                <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"input" %>
+              </div>
+            </div>
+
+            <div class="field">
+              <%= f.label :current_password, class:"label" %> <i>(we need your current password to confirm your changes)</i>
+              <div class="control">
+                <%= f.password_field :current_password, autocomplete: "current-password", class:"input" %>
+              </div>
+            </div>
+
+              <div class="field">
+              <%= f.label :Company_Name, class:"label" %>
+              <div class="control">
+                <%= f.text_field :Company_Name, autocomplete: "Company_Name", class:"input" %>
+              </div>
+            </div>
+
+            <div class="field">
+              <%= f.label :cellphone, class:"label" %>
+              <div class="control">
+                <%= f.text_field :cellphone, autocomplete: "cellphone", class:"input" %>
+              </div>
+            </div>
+
+            <div class="field">
+              <%= f.label :Address %>
+              <div class="control">
+                <%= f.text_field :Address, autocomplete: "Address", class:"input" %>
+              </div>
+            </div>
+
+            <div class="field">
+              <%= f.label :Category, class:"label" %>
+              <div class="control">
+                <%= f.text_field :Category, autocomplete: ":Category", class:"input" %>
+              </div>
+            </div>
+
+            <div class="field">
+              <%= f.label :Status, class:"label" %>
+              <div class="control">
+                <%= f.text_field :Status, autocomplete: "Status", class:"input" %>
+              </div>
+            </div>
+
+            <div class="field">
+              <%= f.label :Pro_Number, class:"label" %>
+              <div class="control">
+                <%= f.text_field :Pro_Number, autocomplete: "Pro_Number", class:"input" %>
+              </div>
+            </>
+
+            <div class="actions">
+              <%= f.submit "Update", class:"button is-success mt-3" %>
+            </div>
+          <% end %>
+
+
+          <div class="card">
+            <header class="card-header">
+              <h3>Cancel my account</h3>
+            </header>
+            <div class="card-content">
+              <div class="content">
+                <p><i>If you are not happy with the Account, You can Cancel it</i></p>
+              </div>
+            </div>
+            <footer class="card-footer">
+              <div class="card-footer-item">
+              <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class:"button is-danger" %>
+              </div>
+              <div class="card-footer-item">
+                <%= link_to "Back", :back, class:"button is-dark" %>
+              </div>
+            </footer>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
