--- a/app/views/equipment_services/_form.html.erb
+++ b/app/views/equipment_services/_form.html.erb
@@ -12,71 +12,97 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Company_Name %>
-    <%= form.text_field :Company_Name %>
+    <%= form.label :Company_Name, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Company_Name, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Date %>
-    <%= form.date_select :Date %>
+    <%= form.label :Date, class:"label" %>
+    <div class="control">
+      <%= form.date_select :Date, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Season %>
-    <%= form.text_field :Season %>
+    <%= form.label :Season, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Season, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Type %>
-    <%= form.text_field :Type %>
+    <%= form.label :Type, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Type, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Equipment_Number %>
-    <%= form.text_field :Equipment_Number %>
+    <%= form.label :Equipment_Number, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Equipment_Number, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Service_Type %>
-    <%= form.text_field :Service_Type %>
+    <%= form.label :Service_Type, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Service_Type, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Done_By %>
-    <%= form.text_field :Done_By %>
+    <%= form.label :Done_By, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Done_By, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Mileage %>
-    <%= form.text_field :Mileage %>
+    <%= form.label :Mileage, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Mileage, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :next_service-milaege %>
-    <%= form.text_field :next_service-milaege %>
+    <%= form.label :next_service_milaege, class:"label" %>
+    <div class="control">
+      <%= form.text_field :next_service_milaege, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Job %>
-    <%= form.text_field :Job %>
+    <%= form.label :Job, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Job, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Total_Amount %>
-    <%= form.text_field :Total_Amount %>
+    <%= form.label :Total_Amount, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Total_Amount, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Pro_Number %>
-    <%= form.text_field :Pro_Number %>
+    <%= form.label :Pro_Number, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Pro_Number, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
+    <%= form.label :user_id, class:"label" %>
+    <div class="control">
+      <%= form.text_field :user_id, class:"input" %>
+    </div>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class:"button is-success" %>
   </div>
 <% end %>
