--- a/app/views/input_calibrations/_form.html.erb
+++ b/app/views/input_calibrations/_form.html.erb
@@ -12,71 +12,97 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Company_Name %>
-    <%= form.text_field :Company_Name %>
+    <%= form.label :Company_Name, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Company_Name, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Date %>
-    <%= form.date_select :Date %>
+    <%= form.label :Date, class:"label" %>
+    <div class="control">
+      <%= form.date_select :Date, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Season %>
-    <%= form.text_field :Season %>
+    <%= form.label :Season, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Season, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Farm_Name %>
-    <%= form.text_field :Farm_Name %>
+    <%= form.label :Farm_Name, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Farm_Name, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Section %>
-    <%= form.text_field :Section %>
+    <%= form.label :Section, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Section, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Crop %>
-    <%= form.text_field :Crop %>
+    <%= form.label :Crop, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Crop, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Variety %>
-    <%= form.text_field :Variety %>
+    <%= form.label :Variety, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Variety, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Fertiiliser_TypeFertiliser_Rate %>
-    <%= form.text_field :Fertiiliser_TypeFertiliser_Rate %>
+    <%= form.label :Fertiiliser_TypeFertiliser_Rate, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Fertiiliser_TypeFertiliser_Rate, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Bags_Used %>
-    <%= form.text_field :Bags_Used %>
+    <%= form.label :Bags_Used, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Bags_Used, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Herbicide %>
-    <%= form.text_field :Herbicide %>
+    <%= form.label :Herbicide, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Herbicide, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Herbicide_Rate %>
-    <%= form.text_field :Herbicide_Rate %>
+    <%= form.label :Herbicide_Rate, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Herbicide_Rate, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Pro_Number %>
-    <%= form.text_field :Pro_Number %>
+    <%= form.label :Pro_Number, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Pro_Number, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
+    <%= form.label :user_id, class:"label" %>
+    <div class="control">
+      <%= form.text_field :user_id, class:"input" %>
+    </div>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class:"button is-success" %>
   </div>
 <% end %>
