--- a/app/views/advertisements/new.html.erb
+++ b/app/views/advertisements/new.html.erb
@@ -1,5 +1,15 @@
-<h1>New Advertisement</h1>
-
-<%= render 'form', advertisement: @advertisement %>
-
-<%= link_to 'Back', advertisements_path %>
+<div class="columns is-centered">
+  <div class="column is-12">
+    <div class="card">
+      <header class="card-header">
+        <h1>New Advertisement</h1>
+      </header>
+      <div class="card-content">
+        <div class="content">
+          <%= render 'form', advertisement: @advertisement %>
+          <%= link_to 'Back', advertisements_path, class:"button is-dark my-4" %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
