--- a/app/views/barn_and_slate_records/_form.html.erb
+++ b/app/views/barn_and_slate_records/_form.html.erb
@@ -12,61 +12,82 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Company_Name %>
-    <%= form.text_field :Company_Name %>
+    <%= form.label :Company_Name, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Company_Name, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Date %>
-    <%= form.date_select :Date %>
+    <%= form.label :Season, class:"label" %>
+      <%= form.text_field :Season, class:"input" %>
+    <div class="control"></div>
   </div>
 
   <div class="field">
-    <%= form.label :Season %>
-    <%= form.text_field :Season %>
+    <%= form.label :Farm_Name, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Farm_Name, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Farm_Name %>
-    <%= form.text_field :Farm_Name %>
+    <%= form.label :P_Barn_Number, class:"label" %>
+    <div class="control">
+      <%= form.text_field :P_Barn_Number, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :P_Barn_Number %>
-    <%= form.text_field :P_Barn_Number %>
+    <%= form.label :Reap, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Reap, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Reap %>
-    <%= form.text_field :Reap %>
+    <%= form.label :P_Slate_NumberSlate_Weight, class:"label" %>
+    <div class="control">
+      <%= form.text_field :P_Slate_NumberSlate_Weight, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :P_Slate_NumberSlate_Weight %>
-    <%= form.text_field :P_Slate_NumberSlate_Weight %>
+    <%= form.label :Barn_Weight, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Barn_Weight, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Barn_Weight %>
-    <%= form.text_field :Barn_Weight %>
+    <%= form.label :Cumulative_Barn_Weight, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Cumulative_Barn_Weight, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Cumulative_Barn_Weight %>
-    <%= form.text_field :Cumulative_Barn_Weight %>
+    <%= form.label :Pro_Number, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Pro_Number, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Pro_Number %>
-    <%= form.text_field :Pro_Number %>
+    <%= form.label :user_id, class:"label" %>
+    <div class="control">
+      <%= form.text_field :user_id, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
-  </div>
+    <%= form.label :Date, class:"label" %>
+    <div class="control">
+      <%= form.date_select :Date, class:"input" %>
+    </div>
+  </>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class:"button is-success" %>
   </div>
 <% end %>
