--- a/app/views/cash_requisitions/_form.html.erb
+++ b/app/views/cash_requisitions/_form.html.erb
@@ -12,61 +12,83 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Company_Name %>
-    <%= form.text_field :Company_Name %>
+    <%= form.label :Company_Name, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Company_Name, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Date %>
-    <%= form.date_select :Date %>
+    <%= form.label :Date, class:"label" %>
+    <div class="control">
+      <%= form.date_select :Date, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Season %>
-    <%= form.text_field :Season %>
+    <%= form.label :Season, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Season, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Farm_Name %>
-    <%= form.text_field :Farm_Name %>
+    <%= form.label :Farm_Name, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Farm_Name, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Employee_Name %>
-    <%= form.text_field :Employee_Name %>
+    <%= form.label :Employee_Name, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Employee_Name, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Amount_Requested %>
-    <%= form.text_field :Amount_Requested %>
+    <%= form.label :Amount_Requested, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Amount_Requested, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Amount_Issued %>
-    <%= form.text_field :Amount_Issued %>
+    <%= form.label :Amount_Issued, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Amount_Issued, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Pay_From %>
-    <%= form.date_select :Pay_From %>
+    <%= form.label :Pay_From, class:"label" %>
+    <div class="control">
+      <%= form.date_select :Pay_From, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Pay_To %>
-    <%= form.date_select :Pay_To %>
+    <%= form.label :Pay_To, class:"label" %>
+    <div class="control">
+      <%= form.date_select :Pay_To, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Pro_Number %>
-    <%= form.text_field :Pro_Number %>
+    <%= form.label :Pro_Number, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Pro_Number, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
+    <%= form.label :user_id, class:"label" %>
+    <div class="control">
+      <%= form.text_field :user_id, class:"input" %>
+    </div>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class:"button is-success" %>
   </div>
 <% end %>
