--- a/app/views/cashflows/_form.html.erb
+++ b/app/views/cashflows/_form.html.erb
@@ -12,76 +12,104 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Company_Name %>
-    <%= form.text_field :Company_Name %>
+    <%= form.label :Company_Name, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Company_Name, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Date %>
-    <%= form.date_select :Date %>
+    <%= form.label :Date, class:"label" %>
+    <div class="control">
+      <%= form.date_select :Date, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Season %>
-    <%= form.text_field :Season %>
+    <%= form.label :Season, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Season, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Month %>
-    <%= form.text_field :Month %>
+    <%= form.label :Month, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Month, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Grower_Name %>
-    <%= form.text_field :Grower_Name %>
+    <%= form.label :Grower_Name, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Grower_Name, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Hectrage %>
-    <%= form.text_field :Hectrage %>
+    <%= form.label :Hectrage, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Hectrage, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Operation %>
-    <%= form.text_field :Operation %>
+    <%= form.label :Operation, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Operation, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Unit_Price %>
-    <%= form.text_field :Unit_Price %>
+    <%= form.label :Unit_Price, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Unit_Price, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :quantity_per_hectre %>
-    <%= form.text_field :quantity_per_hectre %>
+    <%= form.label :quantity_per_hectre, class:"label" %>
+    <div class="control">
+      <%= form.text_field :quantity_per_hectre, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Unity %>
-    <%= form.text_field :Unity %>
+    <%= form.label :Unity, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Unity, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Input_Name %>
-    <%= form.text_field :Input_Name %>
+    <%= form.label :Input_Name, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Input_Name, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Total_Amount %>
-    <%= form.text_field :Total_Amount %>
+    <%= form.label :Total_Amount, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Total_Amount, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :Pro_Number %>
-    <%= form.text_field :Pro_Number %>
+    <%= form.label :Pro_Number, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Pro_Number, class:"input" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
+    <%= form.label :user_id, class:"label" %>
+    <div class="control">
+      <%= form.text_field :user_id, class:"input" %>
+    </div>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class:"button is-success" %>
   </div>
 <% end %>
